# cross-chain-swap

./: .gitignore  Makefile  README.md  call-polka.md  commands.md
config/: evm.addresses.mainnet.json  networks.json
contracts/: .escrow_code_hash
contracts/ink/htlc-escrow/: Cargo.toml  lib.rs  upload.out
contracts/ink/htlc-escrow/.cargo/: config.toml
contracts/ink/htlc-factory/: Cargo.toml  lib.rs
contracts/ink/psp22-token/: Cargo.toml  lib.rs
contracts/ink/psp22token/: Cargo.toml  README.md  lib.rs
docs/: implementation-plan.md
scripts/: package-lock.json  package.json
scripts/evm/: .env.example  EscrowFactoryABI.json  Note.md  ResolverABI.json  constants.js  deployResolver.js  evm_example.js  finalize_evm.js  htlc-tools.js  package-lock.json  package.json
scripts/substrate/: .env.example  deployFactory.js  deployFactoryCLI.js  factory.ts  faucet.ts  package-lock.json  package.json  read.js  tsconfig.json  wait.js
