[package]
name = "htlc_escrow"
version = "0.1.0"
authors = ["Cross-Chain Swap Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/verkhohliad/cross-chain-swap"
description = "ink! HTLC escrow for native/PSP22 on Substrate parachains"

[lib]
name = "htlc_escrow"
path = "lib.rs"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
# Expose cross-contract refs to dependents
ink-as-dependency = []

[package.metadata.contract]
authors = ["Cross-Chain Swap Team"]
name = "htlc_escrow"
version = "0.1.0"
